--- a/index.html
+++ b/index.html
@@ -9,30 +9,7 @@
     <link rel="stylesheet" href="anim.css">
 </head>
 <body>
-    
-    </br>
-    <a href="#" class="btn-neon">
-        <span id="span1"></span>
-        <span id="span2"></span>
-        <span id="span3"></span>
-        <span id="span4"></span>
-        HOLGUIN STORE
-    </a>
-    </br>
-    <div id="text">
-       <h1>EN <span id="offset">C</span>ONST<span id="offset">R</span>UC<span id="offset">C</span>ION</h1>
-    </div>
-    
-    <div class="meteoros" >
-    <div class="meteoro" ></div>
-    <div class="meteoro" ></div>
-    <div class="meteoro" ></div>
-    <div class="meteoro" ></div>
-    <div class="meteoro" ></div>
-    <div class="meteoro" ></div>
-    <div class="meteoro" ></div>
-    <div class="meteoro" ></div>
-    </div>
+    <h1>estoy de nuevo</h1>
 
 </body>
 </html>
