--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     <link rel="stylesheet" href="anim.css">
 </head>
 <body>
+    <div class="menu">
+        <ul>
+            <li>Home</li>
+            <li>Servicios</li>
+            <li>Contacto</li>
+        </ul>
+    </div>
     <h1>estoy de nuevo</h1>
 
 </body>
