--- a/index.html
+++ b/index.html
@@ -41,5 +41,18 @@
 			</ul>
 		</nav>
 
+		<div class="contenidogeneral">
+			<div class="portada"><h1>Sistemas de seguridad electronica y redes de telecomunicacion</h1></div>
+			<article class="contenidoppal">
+				<section class="seccion1">
+					<h1>Servicios De Instalacion En Antioquia y Colombia</h1>
+					<h1>¿Que Ofrecemos?</h1>
+					<div class="parrafo1"><p>Ponemos a tu disposición una amplia variedad de sistemas de seguridad y alarmas en Medellín que se adaptan a las características de cada hogar o negocio de acuerdo con el área donde se ubica, así como de tus necesidades particulares.
+					</br></br></br>Nuestros técnicos analizarán tus necesidades para encontrar el sistema de seguridad que mejor se adapte a tus circunstancias. Llámanos y te elaboraremos una cotización sin compromiso y te garantizaremos el mejor precio para tu sistema de alarma o videovigilancia.</p>
+					</div>
+					<div class="imagen1"></div>
+				</section>
+			</article>
+		</div>
 </body>
 </html>
