--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="contenedor">
 
 	<span class="ir-arriba icon-arrow-up"></span>
-	<span class="chatme"><span class="icon-bubbles3"></span></span>
+	<a href="https:/wa.me/573007732526" target="_blank"><span class="chatme"><span class="icon-bubbles3"></span></span></a>
 
 	<input type="checkbox" id="btn-nav" class="checkbox">
     <header>
@@ -42,8 +42,11 @@
 		</nav>
 
 		<div class="contenidogeneral">
+
 			<div class="portada"><h1>Sistemas de seguridad electronica y redes de telecomunicacion</h1></div>
+
 			<article class="contenidoppal">
+
 				<section class="seccion1">
 					<h1>Servicios De Instalacion En Antioquia y Colombia</h1>
 					<h1>¿Que Ofrecemos?</h1>
