--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="contenedor">
 
 	<span class="ir-arriba icon-arrow-up"></span>
-	<a href="https:/wa.me/573007732526" target="_blank"><span class="chatme"><span class="icon-bubbles3"></span></span></a>
+	<a href="http:/wa.me/573007732526/" target="_blank"><span class="chatme"><span class="icon-bubbles3"></span></span></a>
 
 	<input type="checkbox" id="btn-nav" class="checkbox">
     <header>
@@ -55,7 +55,24 @@
 					</div>
 					<div class="imagen1"></div>
 				</section>
+				<section class="servicios">
+					<div>
+						<div></div>
+						<p>Camaras para tu horgar</p>
+						<div></div>
+						<p>Video-vigilancia en tu finca</p>
+						<div></div>
+						<p>Soluciones para tu negocio</p>
+					</div>
+				</section>
 			</article>
 		</div>
+
+
+		<footer>
+			<div>
+				<div>Todos los derechos reversados <a href="http:/instagram.com/holguincalle">@holguincalle</a></div>
+			</div>
+		</footer>
 </body>
 </html>
