cambio de fuente servicios

--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
 				<section class="servicios">
 					<div>
 						<div></div>
-						<p>Camaras para tu horgar</p>
+						<h1>Camaras para tu horgar</h1>
 						<div></div>
-						<p>Video-vigilancia en tu finca</p>
+						<h1>Video-vigilancia en tu finca</h1>
 						<div></div>
-						<p>Soluciones para tu negocio</p>
+						<h1>Soluciones para tu negocio</h1>
 					</div>
 				</section>
 			</article>
